--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,29 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>About</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: page
+title: "About"
+date: 2015-10-18 -0800
+comments: false
+categories: [personal]
+sharing: false
+---
+
+## Why I Created This Blog
+
+While working at my current job, I would experience difficulties when working with some poorly
+documented issues online. Some of these issues would come up, time and time again. This cycle
+would drive me insane. A lot of these issues weren't anything that a PhD professor would need
+to write his/her thesis on, and I figured I thought this would be a great way to contribute to
+a community that I rely so heavily on when doing my work. The community that wraps itself around
+
+## Where I Went to School
+
+I graduated from UCI in 2015 with a degree in Computer Science. Previously I attended Fullerton College
+which is where I met a handful of friends and professor that got me to find a love/passion for coding.
+I feel like if I didn't originally attend my junior college and meet the people that I did, I probably
+would've ended up as a history major or something.
+
+## What I Do For Fun
+
+Sometimes...
+http://imgur.com/u3lWw
+Mostly...
