--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ single: true
 ---
 
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<div>
+	<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
+</div>
